# events-app

./: .gitignore  LICENSE  Makefile  README.md  alembic.ini  bot.py  docker-compose.yml  main.py  pyproject.toml
app/: config.py  utils.py
app/api/: api_routes.py
app/api/events/: crud.py  schemas.py  views.py
app/api/users/: crud.py  schemas.py  views.py
app/bot/: api_client.py  bot.py  handlers.py  utils.py
app/bot/keyboard/: keyb.py
app/bot/models/: base.py  user.py
app/core/: config.py  fake_data.py  utils.py
app/db/: database.py  db_helper.py  dependency.py  routes.py
app/migration/: env.py
app/migration/versions/: 2024_12_11_1223-6b8b382d4fe6_initial_revision.py  2024_12_11_1410-c4840b0299fa_initial_revision.py  2024_12_19_2302-806d5e4d3be5_update_tables.py  2024_12_25_2330-05b154910ad9_modify_event_add_field.py  2024_12_26_1315-2fd7c9e2ad0c_userevent_edit_field.py  2025_01_17_1150-e6fe07dbd2f8_upgrade_event_date.py  2025_01_24_1636-e3fad42bc3f9_update_userevent.py  251a784dcf48_update_events.py  3c3b52d1b6a5_reafactor_base_model.py  41627bb701d9_update_events.py  b8d0b853b6f2_set_unique_for_telegram_id.py  cc4e59e14d5b_update_events.py  fef00d1db370_update_events.py
app/models/: __init__.py  base.py  event.py  models.py  user.py
bot/: api_service.py  bot.py  events_callback.py  handlers.py  keyb.py  utils.py
bot/api_serv/: api_service.py
bot/api_srv/: api_service.py
bot/keyboard/: main_kb.py  user_choice_kb.py
bot/routers/: __init__.py  calendar_handler.py  common.py
bot/routers/commands/: base_cmds.py
bot/utils/: edit_event_message.py  format_message.py  mods.py
core/: __init__.py  config.py  fake_data.py
src/: config.py  main.py
src/api/: api_routes.py
src/api/events/: crud.py  views.py
src/api/users/: crud.py
src/db/: db_helper.py
src/migration/: env.py
src/migration/versions/: 2024_12_25_2307-64c5416060b1_create_event.py  2024_12_26_1224-ad25b41b44b1_userevent_add_user_choice.py  2024_12_27_1358-1732e6abc711_add_username_to_userevent_table.py  2025_01_24_1636-e3fad42bc3f9_update_userevent.py  2025_02_28_1340-9687879e8877_upgrade_event_date_add_minumim_.py
src/models/: __init__.py  base.py  event.py  user.py
