[project]
name = "event-app"
version = "0.1.0"
description = ""
authors = [{ name = "Pavel Skobelev", email = "pskobelev@me.com" }]
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "fastapi[standard]>=0.115.5,<0.116",
    "uvicorn[standart]>=0.32.1,<0.33",
    "psycopg2-binary>=2.9.10,<3",
    "python-dotenv>=1.0.1,<2",
    "sqlalchemy>=2.0.36,<3",
    "pydantic>=2.9.2,<3",
    "pydantic-settings>=2.6.1,<3",
    "asyncpg>=0.30.0,<0.31",
    "greenlet>=3.1.1,<4",
    "alembic>=1.14.0,<2",
    "aiogram>=3.15.0,<4",
    "aiogram-calendar>=0.6.0",
]

[dependency-groups]
dev = [
    "pytest-asyncio>=0.25.2,<0.26",
    "pytest-mock>=3.14.0,<4",
    "faker>=33.1.0,<34",
    "ruff>=0.8.0,<0.9",
    "mypy>=1.13.0,<2",
    "pytest>=8.3.4,<9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["event_app"]

[tool.ruff]
line-length = 79
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
